# 19

./: README.md  data.json  pyproject.toml
blogpost/: forms.py  models.py  urls.py  views.py
blogpost/migrations/: 0001_initial.py  0002_alter_blogpost_title.py  0003_alter_blogpost_options.py
blogpost/templates/blogpost/: blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html
blogpost/templatetags/: media.py
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_alter_categories_category_description.py  0002_products_manufactured_at.py  0003_version.py  0004_products_seller.py  0005_alter_products_options.py  0006_products_publication_sign.py  0007_products_number_of_views.py  0008_alter_products_options.py
catalog/templates/catalog/: base.html  contacts.html  home.html  product.html  products.html  products_confirm_delete.html  products_detail.html  products_form.html  products_list.html
catalog/templates/catalog/include/: inc_menu.html
catalog/templatetags/: media.py
config/: settings.py  urls.py
hw1/: README.md  index.html  main.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: adm.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_alter_user_options.py  0004_alter_user_country.py
users/templates/users/: login.html  recovery_pass.html  register.html  user_form.html  verification.html
