[tool.poetry]
name = "19"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2"
psycopg2 = "^2.9.9"
asgiref = "^3.8.1"
sqlparse = "^0.5.0"
tzdata = "^2024.1"
ipython = "^8.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
